--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NostrResearch - Decentralized Scientific Publishing</title>
+    <meta name="description" content="A decentralized platform for scientific research publishing with peer review, zap validation, and anonymous evaluation." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="NostrResearch - Decentralized Scientific Publishing" />
+    <meta property="og:description" content="A decentralized platform for scientific research publishing with peer review, zap validation, and anonymous evaluation." />
     <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' https:">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
